# orange-quant

./: .AGENT.md  .CLAUDE.md  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-server.txt  requirements.txt
.claude/skills/: download-data.md  live-trade.md  setup-env.md  train-backtest.md
apps/claude/: .env.example
apps/database/: package.json  tsconfig.json
apps/news-ingestor/: package.json
config/: binance-lgb-momtopk.yaml  csi300-gru-momtopk.yaml  csi300-lgb-momtopk.yaml  csi300-lstm-momtopk.yaml  csi300-transformer-momtopk.yaml  workflow_config.yaml  workflow_config_crypto.yaml  workflow_config_crypto_1h.yaml  workflow_config_crypto_spot.yaml  workflow_config_dl_gru.yaml  workflow_config_dl_lstm.yaml  workflow_config_dl_transformer.yaml
data/crypto_raw_1h/: AVAX.csv  BTC.csv  DOGE.csv  ENA.csv  ETH.csv  S.csv  SOL.csv  WLD.csv  ZEC.csv
mlruns/0/: meta.yaml
mlruns/469548638607640326/: meta.yaml
mlruns/558374719438588044/: meta.yaml
models/: binance20_lgb.pkl  crypto_lgb_model.pkl
notebooks/: 01_quickstart.ipynb  02_crypto_lightgbm.ipynb
orange_quant/: __init__.py
orange_quant/backtest/: __init__.py  runner.py
orange_quant/data/: __init__.py  crypto_download.py  download.py  handler.py
orange_quant/models/: __init__.py  dl_trainer.py  trainer.py
orange_quant/strategies/: __init__.py  base.py  mom_topk.py
scripts/: build_binance_data.py  build_crypto_data.py  build_crypto_data_1h.py  run_binance_testnet.py  server_entrypoint.py
(+74 files in other folders)
